--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>"Hello World"</title>
+	<title>About Me</title>
+	<body>
+		<h1>Introduction:</h1>
+		<p>My name is Saishravan Muthukrishnan </p>
+	</body>
 	</head>
 </html>
