--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<h1>Introduction:</h1>
 		<p>My name is Saishravan Muthukrishnan </p>
+		<img src="/docs/assets/images/23041998.png" alt="" width="104" height="142">
 	</body>
 	</head>
 </html>
