--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
 	<head>
-	<title>About Me</title>
+		<style>
+			body{
+				background-image: url("C:\\Users\\saish\\OneDrive\\Documents\\GitHub\\yummy2eat.github.io\\docs\\assets\\images\\Untitled.png");
+
+			}
+		</style>
+	<title>Home</title>
 	<body>
-		<h1>Introduction:</h1>
-		<p>My name is Saishravan Muthukrishnan </p>
-		<img src="/docs/assets/images/23041998.png" alt="" width="104" height="142">
+		<nav>
+			<a style="text-align:center;color: goldenrod" href="/index.html">Home</a>
+			<a style="text-align:center;color: goldenrod" href="./about.html">About</a>
+			<a style="text-align:center;color: goldenrod" href="./projects.html">Projects</a>
+			<a style="text-align:center;color: goldenrod" href="./contact.html">Contact</a>
+
+			
+		</nav>
+		<h1 style="text-align:center;color:yellow">Welcome!</h1>
+		<h2 style = "text-align:center;color:yellow">My name is Saishravan Muthukrishnan and in this is where I post all of my personal projects! </h2>
 	</body>
 	</head>
 </html>
