Changed bg image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 			body{
-				background-image: url("C:\\Users\\saish\\OneDrive\\Documents\\GitHub\\yummy2eat.github.io\\docs\\assets\\images\\Untitled.png");
+				background-image: url("docs/assets/images/deepspaceimage.jpg");
 
 			}
 		</style>
