--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 			body{
-				background-image: url("docs/assets/images/deepspaceimage.jpg");
+				background-image: url("yummy2eat.github.io/docs/assets/images/deepspaceimage.jpg");
 
 			}
 		</style>
