--- a/index.html
+++ b/index.html
@@ -10,15 +10,38 @@
 	<title>Home</title>
 	<body>
 		<nav>
-			<a style="text-align:center;color: goldenrod" href="/index.html">Home</a>
-			<a style="text-align:center;color: goldenrod" href="./about.html">About</a>
+			<a style="text-align:center;color: goldenrod" href="#Home">Home</a>
+			<a style="text-align:center;color: goldenrod" href="#AboutMe">About</a>
 			<a style="text-align:center;color: goldenrod" href="./projects.html">Projects</a>
 			<a style="text-align:center;color: goldenrod" href="./contact.html">Contact</a>
 
 			
 		</nav>
 		<h1 style="text-align:center;color:yellow">Welcome!</h1>
-		<h2 style = "text-align:center;color:yellow">My name is Saishravan Muthukrishnan and in this is where I post all of my personal projects! </h2>
+		<a id="Home"><h2 style = "text-align:center;color:yellow">My name is Saishravan Muthukrishnan and in this is where I post all of my personal projects! </h2></a>
+		
+		<hr>
+		
+		<a id="AboutMe"><h1 style="text-align:center;color:yellow">About Me:</h1></a>
+		<dl>
+		<dt style = "color:orange">Education</dt>
+		<dd style = "color:blue">University of Texas at Dallas (2022-</dd>
+		<dt style = "color:orange">Major</dt>
+		<dd style = "color:blue">Computer Science</dd>
+		<dt style = "color:orange">Interests</dt>
+		<dd style = "color:blue">Game Development</dd>
+		<dd style = "color:blue">Cybersecurity</dd>
+		</dl>
+		
+		<hr>
+		<a id ="Projects"><h1 style="text-align:center;color:yellow">Projects:</h1></a>
+		<dl>
+		<dt style = "color:orange"><h2>DSS Engine:</h2></dt>
+		
+		</dl>
+		<hr>
+		
+		
 	</body>
 	</head>
 </html>
