--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<a id ="Projects"><h1 style="text-align:center;color:yellow">Projects:</h1></a>
 		<dl>
 		<dt style = "color:orange"><h2>DSS Engine:</h2></dt>
-		
+		<img src="yummy2eat.github.io/docs/assets/images/dssenginesc.png" alt="DSS Engine Prototype Image">
 		</dl>
 		<hr>
 		
