--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 			body{
-				background-image: url("/docs/assets/images/deepspaceimage.jpg");
+				background-image: url("yummy2eat.github.io/docs/assets/images/deepspaceimage.jpg");
 
 			}
 		</style>
@@ -37,7 +37,7 @@
 		<a id ="Projects"><h1 style="text-align:center;color:yellow">Projects:</h1></a>
 		<dl>
 		<dt style = "color:orange"><h2>DSS Engine:</h2></dt>
-		<img src="/docs/assets/images/dssenginesc.png" alt="DSS Engine Prototype Image">
+		<img src="yummy2eat.github.io/docs/assets/images/dssenginesc.png" alt="DSS Engine Prototype Image">
 		</dl>
 		<hr>
 		
