--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 			body{
-				background-image: url("yummy2eat.github.io/docs/assets/images/deepspaceimage.jpg");
+				background-image: url("./docs/assets/images/deepspaceimage.jpg");
 
 			}
 		</style>
@@ -12,8 +12,8 @@
 		<nav>
 			<a style="text-align:center;color: goldenrod" href="#Home">Home</a>
 			<a style="text-align:center;color: goldenrod" href="#AboutMe">About</a>
-			<a style="text-align:center;color: goldenrod" href="./projects.html">Projects</a>
-			<a style="text-align:center;color: goldenrod" href="./contact.html">Contact</a>
+			<a style="text-align:center;color: goldenrod" href="#Projects">Projects</a>
+			<a style="text-align:center;color: goldenrod" href="#Contact">Contact</a>
 
 			
 		</nav>
@@ -24,24 +24,59 @@
 		
 		<a id="AboutMe"><h1 style="text-align:center;color:yellow">About Me:</h1></a>
 		<dl>
-		<dt style = "color:orange">Education</dt>
-		<dd style = "color:blue">University of Texas at Dallas (2022-</dd>
-		<dt style = "color:orange">Major</dt>
-		<dd style = "color:blue">Computer Science</dd>
-		<dt style = "color:orange">Interests</dt>
-		<dd style = "color:blue">Game Development</dd>
-		<dd style = "color:blue">Cybersecurity</dd>
+		<dt style = "text-align:center;color:orange">Education</dt>
+		<dd style = "text-align:center;color:blue">University of Texas at Dallas (2022-</dd>
+		<dt style = "text-align:center;color:orange">Major</dt>
+		<dd style = "text-align:center;color:blue">Computer Science</dd>
+		<dt style = "text-align:center;color:orange">Interests</dt>
+		<dd style = "text-align:center;color:blue">Game Development</dd>
+		<dd style = "text-align:center;color:blue">Cybersecurity</dd>
 		</dl>
 		
 		<hr>	
 		<a id ="Projects"><h1 style="text-align:center;color:yellow">Projects:</h1></a>
 		<dl>
-		<dt style = "color:orange"><h2>DSS Engine:</h2></dt>
-		<img src="yummy2eat.github.io/docs/assets/images/dssenginesc.png" alt="DSS Engine Prototype Image">
+		<dt style = "color:orange"><h2><u>DSS Engine:</u></h2></dt>
+		<img src="./docs/assets/images/dssenginesc.png" alt="DSS Engine Prototype Image" width="400" height="400">
+		<p style="color:orange">-The DSS Engine is an ongoing project which attempts to create a fully modular 2D physics engine in Python using the Pygame graphics module.</p>
+		<p style="color:orange">-This large project was started in July 2022 alongside two of my peers, and one of the main goals of the project was to familiarize ourselves with low level graphics and rendering processes in game development</p>
+		<p style="color:orange">-The engine is extremely lightweight, boasting a size of only 388 kilobytes!</p>
+		<a style="color:rgba(240, 52, 80, 0.868)" href="https://github.com/yummy2eat/DSS-Engine">-Click here to go to the project's Github repository</a>
+		</dl>
+		
+
+		<dl>
+		<dt style ="color:orange"><h2><u>Missile Command:</u></h2></dt>
+		<p style="color:orange">-Missile Command was a group semester project in our high School Video Game Programming class.</p>
+		<p style="color:orange">-This game is written entirely using Microsoft XNA/.NET and aims to recreate the arcade classic with the same name.</p>
+		<a style="color:rgba(240, 52, 80, 0.868)" href="https://github.com/yummy2eat/MissileCommand">-Click here to go to the project's Github repository</a>
+
+		</dl>
+
+		<dl>
+		<dt style="color:orange"><h2><u>LT Space Game:</u></h2></dt>
+		<p style="color:orange">-LT Space Game (working title) was a large video game group project I started in my senior year of high school, the aim being to create a 2D RPG.</p>
+		<p style="color:orange">-I wanted a way for people interested in different fields (art,music,design,and programming) to come together and apply their knowledge in a tangible project, so I decided to start it as a school club</p>
+		<p style="color:orange">-Everyone was cooardinated into different teams based on their interests and over the span of the school year we all worked towards getting a finished project</p>
+		<p style="color:orange">-Due to time constraints, as we were all still full time high school students, parts of the project remain unfinished however by the end we had a working prototype which was the culmination of everyone's continued efforts</p>
+		<a style="color:rgba(240, 52, 80, 0.868)" href="https://github.com/devAgant/LTSpaceGame">-Click here to go to the project's Github repository</a>
+
+		</dl>
+
+
+
 		</dl>
 		<hr>
 		
-		
+		<a id ="Contact"><h1 style="text-align:center;color:yellow">Contact:</h1></a>
+		<a style="text-align:center;color:rgba(240, 52, 80, 0.868)" href="mailto:saishravanm@gmail.com">Email</a>
+		<a style="text-align:center;color:rgba(240, 52, 80, 0.868)" href="https://github.com/yummy2eat">Github</a>
+		<a style="text-align:center;color:rgba(240, 52, 80, 0.868)" href="https://www.linkedin.com/in/saishravan-muthukrishnan-0813011b9/">Linkedin</a>	
+
+
+
+
+
 	</body>
 	</head>
 </html>
